--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="row">
 				<div class="small-12 column">
 					<div class="cta text-center">
-						<a class="my-button cta-button expand form-button" href="mailto:hello@roquepress.com">Get In Touch</a>
+						<a class="my-button cta-button expand form-button" href="mailto:hello@roquepress.com">Get In Touch Now</a>
 					</div>
 				</div>
 				<div class="small-12 column">
